force-app/main/default/objects/refedge__Reference_Request_Account__c/refedge__Reference_Request_Account__c.object-meta.xml
<CustomObject>
    <description>Junction table associating Reference Requests with accounts</description>
    <label>Account Request</label>
    <nameField>
        <displayFormat>RRA-{000000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>