force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Request Power of One</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>