force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Approve_Deny_Notes__c.field-meta.xml
<CustomField>
    <fullName>refedge__Approve_Deny_Notes__c</fullName>
    <label>Approve Deny Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>