force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Reference_Request_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Request_Additional_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Request Additional Info</label>
    <referenceTo>refedge__Reference_Request_Additional_Info__c</referenceTo>
    <relationshipLabel>Account Requests</relationshipLabel>
    <relationshipName>Account_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>