force-app/main/default/objects/refedge__Reference_Request_Account__c/fields/refedge__Reference_Use__c.field-meta.xml
<CustomField>
    <fullName>refedge__Reference_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows for segmenting Reference Use records from other RRAC records in reporting/dashboard; checked when a Reference Use is recorded from the Reference Use form.</description>
    <label>Reference Use</label>
    <type>Checkbox</type>
</CustomField>